--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
-		"@types/node": "^13.13.4",
-		"simple-plist": "^1.1.0"
+		"@types/node": "^15.0.1",
+		"browser-hex": "^1.0.1",
+		"simple-plist": "^1.1.1"
 	},
 	"devDependencies": {
 		"dumper.js": "^1.3.1",
-		"ts-node": "^8.10.1",
-		"typescript": "^3.8.3"
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.4"
 	}
 }
